interpreter/tests/golden-files/lists-mapping.golden.enzo
//= LIST MAPPING STUFF ───────────────────────────────────────────────────────────
[$name: "Alice", $age: 30]
"Alice"
30
//= REBINDING LIST PROPERTIES ────────────────────────────────────────────
"Bob"
[$name: "Bob", $age: 30]
//= ANOTHER LIST + PROPERTY REBIND ───────────────────────────────────────
[$foo: 42, $bar: "hello"]
"hello"
100
[$foo: 100, $bar: "hello"]
//= EMPTY LIST LITERAL + BAD PROP ACCESS ERROR ──────────────────────────
[]
error: List property not found: $someKey
	$emptyListMap.someKey;    // error: Keyname '$someKey' does not exist on this List
//= NESTED LIST + MIXED INDEX/PROPERTY ───────────────────────────────────────
[$inner: [$val: 42, $arr: [10, 20]]]
42
20
//= REBINDING NESTED LISTS ───────────────────────────────────────────────
100
//= COMPLEX LIST INDEX/PROPERTY ACCESS ─────────────────────────
[$list-map: [$a: [100, 200], $b: "x"], $list-index: [[$foo: 1], [$foo: 2]]]
100
2
//= LIST OF LISTS + INDEX OF LIST ─────────────────────────────────────
[$first: [1, 2], $second: [3, 4]]
2
[3, 4]
//= MORE LIST WEIRDNESS
[$x: [$y: [$z: 7]]]
7
//= List property errors
[$foo: 1]
error: List property not found: $bar
	$list9.bar;         // error: List property '$bar' not found
1
error: List property not found: $bar
	$list9.foo.bar;     // error: List property '$bar' not found
999
error: List property not found: $someKey
	$prim.someKey <: 5;       // error: List property '$someKey' not found
[$a: 1]
1
[$x: 1]
99
[$x: 99]
error: List property not found: $y
	$table-error.y <: 42;           // error: List property '$y' not found
//= Valid trailing commas (should succeed)
[$foo: 1, $bar: 2]
//= invalid trailing commas (should error)
error: extra comma in List
	$badList1: [$foo: 1,, $bar: 2];
error: excess leading comma
	$badList2: [ ,$foo: 1, $bar: 2];
error: empty List with just a comma
	$badList3: [ ,];
